# claude-code-attractors

./: .gitignore  CLAUDE.md  Dockerfile  README.md  RESULTS.md  TODO.txt  analyze.py  analyzer.py  conversation.py  orchestrator.py  requirements.txt  run-sandboxed.sh  run_experiment.py  visualizer.py
claude_code_experiment/: orchestrator.py
experiment_runs/runset_2026-01-22_22-13-37/run_2026-01-23_01-23-41/output/: Cargo.toml  README.md  analysis_demo.md  ci_integration.py  ci_integration.rs  code-analyzer-config.yml  code_analysis_ci.json  code_analyzer.py  code_analyzer.rs  demo.rs  demo.sh  demo_analysis.py  demo_analyzer.py  dependency_analyzer.rs  example_code.py  example_integration.py  example_usage.rs  github_workflow.yml  hotspot_analyzer.rs  html_reporter.rs  javascript_example.js  language_extractors.rs  main.rs  recommendations_engine.rs  report_generator.rs  requirements.txt  test_example.py  test_sample.py  tree_sitter_analyzer.py
experiment_runs/runset_2026-01-22_22-13-37/run_2026-01-23_01-23-41/output/example/: sample.rs  test_complex.js
experiment_runs/runset_2026-01-22_22-13-37/run_2026-01-23_01-23-41/output/examples/: enhanced_analysis.rs  sample_code.rs
experiment_runs/runset_2026-01-22_22-13-37/run_2026-01-23_01-23-41/output/src/: analyzer.rs  ascii_charts.rs  ast_analyzer.rs  cli.rs  dependency_analyzer.rs  lib.rs  main.rs  metrics.rs  output.rs  parsers.rs  visualization.rs
experiment_runs/runset_2026-01-22_22-13-37/run_2026-01-23_01-23-41/output/templates/: report.html  report.js  report_template.html  styles.css
tests/: __init__.py  (+2 more)
(+1028 files in other folders)
