[package]
name = "codemetrics"
version = "0.1.0"
edition = "2021"
description = "A fast, extensible code metrics analyzer for developers"
license = "MIT"
repository = "https://github.com/alice-bob/codemetrics"
keywords = ["code-analysis", "metrics", "developer-tools", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "codemetrics"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# File system operations
walkdir = "2.4"
ignore = "0.4"  # Respects .gitignore

# Parsing and AST
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"

# Output formatting
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "4.5"  # HTML templating
comfy-table = "7.1"  # Terminal tables
chrono = { version = "0.4", features = ["serde"] }  # Date/time for reports

# Performance and utilities
rayon = "1.8"  # Parallel processing
indicatif = "0.17"  # Progress bars

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"


[profile.release]
lto = true
codegen-units = 1